Giving everything a Z-Index seems to have fixed the issue on iPhones.

--- a/public/globals.css
+++ b/public/globals.css
@@ -7,17 +7,24 @@
   box-sizing: border-box;
 }
 
+/* Prevent body overflow */
+html, body {
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden; /* Prevent horizontal overflow */
+  margin: 0;
+  padding: 0;
+  font-family: 'Quicksand', sans-serif;
+}
+
 /* Body styling */
 body {
-  margin: 0;
-  font-family: 'Quicksand', sans-serif;
   background-image: url('/background.jpg');
   background-size: cover;
   background-attachment: fixed;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  padding: 0;
   overflow-x: hidden; /* Prevent horizontal overflow */
 }
 
@@ -104,6 +111,7 @@ nav a:hover::before {
   max-width: 100%; /* Ensure max width does not exceed viewport */
   backdrop-filter: blur(5px); /* Makes the navbar opaque */
   box-sizing: border-box;
+  z-index: 2; /* Ensure content box is above background */
 }
 
 .content h2, .content h4, .content h5, .content h6 {
@@ -224,6 +232,7 @@ footer {
   border-radius: 15px;
   margin: 20px auto;
   width: fit-content;
+  z-index: 1; /* Ensure footer is above background */
 }
 
 /* Blog, TIL, and Advisory List Styles */
